# cjseq

./: CHANGELOG.md  Cargo.toml
.github/workflows/: publish-npm.yml
src/: appearance.rs  city_object.rs  cityjson.rs  error.rs  geometry.rs  lib.rs  main.rs  metadata.rs  semantics.rs
tests/: cj_input.rs  depth_rejection.rs  roundtrip.rs
tests/data/: degenerate_extent.city.jsonl  duplicate_keys.city.jsonl  empty_appearance.city.jsonl  inferable_types.city.jsonl  long_strings.city.jsonl  single_feature.city.jsonl
