[package]
name = "cjseq2"
version = "0.2.0-alpha.1"
description = "Typed fork of cjseq (create+process+modify+convert CityJSONSeq) pending upstream merge"
authors = ["Hugo Ledoux <h.ledoux@tudelft.nl>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cityjson/cjseq"
repository = "https://github.com/cityjson/cjseq"

[lib]
name = "cjseq"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# serde_derive = "1.0"

# WASM dependencies
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]
optional = true

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[features]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:web-sys", "dep:console_error_panic_hook"]
